fix: adjust font size for mobile export buttons for better visibility
Description:
- Adjusted the font size of export buttons to improve visibility on mobile devices.
- Ensured that the export buttons are more user-friendly and accessible on smaller screens.
- Updated the relevant CSS classes to include the new font size adjustments.
- Conducted thorough testing to verify that the changes work as expected and do not introduce any issues.

--- a/public/css/dashboard_content.css
+++ b/public/css/dashboard_content.css
@@ -143,7 +143,7 @@ td,
     }
 
     .btn-hide-text-mobile {
-        font-size: 20px;
+        font-size: 115%;
     }
 
     .btn-hide-text-mobile i {
